--- a/PIOsimHD-Model/.project
+++ b/PIOsimHD-Model/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>piosim-shared</name>
+	<name>PIOsimHD-Model</name>
 	<comment>@key 32303037303533312D313030302070696F73696D2D7368617265642F77697468616E6167 </comment>
 	<projects>
 	</projects>
