--- a/PIOsimHD-Simulator/.classpath
+++ b/PIOsimHD-Simulator/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/piosim-shared"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PIOsimHD-Model"/>
 	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
