--- a/PIOsimHD-Simulator/.project
+++ b/PIOsimHD-Simulator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PIOsim</name>
+	<name>PIOsimHD-Simulator</name>
 	<comment></comment>
 	<projects>
 	</projects>
