--- a/PIOsimHD-Maint/TraceConverterHD/.classpath
+++ b/PIOsimHD-Maint/TraceConverterHD/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
