--- a/PIOsimHD-Maint/TraceConverterHD/.classpath
+++ b/PIOsimHD-Maint/TraceConverterHD/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PIOsimHD-Model"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
