--- a/PIOsimHD-Maint/path.rc
+++ b/PIOsimHD-Maint/path.rc
@@ -14,6 +14,7 @@ SIMF="$PFAD/PIOsimHD-Simulator"
 MAINTF="$PFAD/PIOsimHD-Maint"
 DOCF="$PFAD/PIOsimHD-Doc"
 MODELF="$PFAD/PIOsimHD-Model"
+TRACECONVERTERF="$MAINTF/TraceConverterHD"
 
 if [[ ! -e  "$SIMF" ]] ; then
 	echo "$SIMF" does not exist
