--- a/PIOsimHD-Model/.classpath
+++ b/PIOsimHD-Model/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
+	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
