--- a/PIOsimHD-Model/.classpath
+++ b/PIOsimHD-Model/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
 	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/HDTraceFormat"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
