--- a/PIOsimHD-Simulator/.classpath
+++ b/PIOsimHD-Simulator/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/PIOsimHD-Model"/>
 	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/HDTraceFormat"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
