logging mit HDTraceWriter, angepasstes create_sim-wrapper.py Skript

--- a/PIOsimHD-Maint/mpiwrapperNew/test/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/test/Makefile
@@ -1,6 +1,7 @@
+
 WRAPPER_MPI = $(shell pwd)
 WRAPPER_CC = $(shell pwd)/bin/mpicc
-WRAPPER_LIB = " `pkg-config --libs glib-2.0`  $(shell pwd)/../sim-wrapper.a"
+WRAPPER_LIB = " `pkg-config --libs glib-2.0` $(shell pwd)/../libHDTraceMPIWrapper.a  $(shell pwd)/../libHDTrace.a"
 
 .PHONY : clean
 .PHONY : mpich-test
@@ -8,18 +9,20 @@ WRAPPER_LIB = " `pkg-config --libs glib-2.0`  $(shell pwd)/../sim-wrapper.a"
 
 all:  test test2 
 
-../sim-wrapper.a:
-	cd .. ; make
+#../sim-wrapper.a:
+#	cd .. ; make
 
+./../libHDTraceMPIWrapper.a:
+	cd ..; make
 
-test2: mpi2test ../sim-wrapper.a
+test2: mpi2test ../libHDTraceMPIWrapper.a
 	cd mpi2test ; SIM_WRAPPER_LIB=$(WRAPPER_LIB) ./configure --with-mpi=$(WRAPPER_MPI) 
 	cd mpi2test ; SIM_WRAPPER_LIB=$(WRAPPER_LIB) make 
 
 mpi2test: 
 	tar -zxf mpi2test.tar.gz
 
-test: mpich-test ../sim-wrapper.a
+test: mpich-test ../libHDTraceMPIWrapper.a
 	cd mpich-test ; SIM_WRAPPER_LIB=$(WRAPPER_LIB) ./configure -cc=$(WRAPPER_CC) -fc=mpif77
 	cd mpich-test ; SIM_WRAPPER_LIB=$(WRAPPER_LIB) make -k
 
