- HDTests verzeichnis für eigene Tests hinzugefügt - Alle Funktionen aus interesting_funcs.h werden getraced

--- a/PIOsimHD-Maint/mpiwrapperNew/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/Makefile
@@ -18,6 +18,6 @@ HDTraceMPIWrapper.c: HDTraceMPIWrapper.src.c ./create_sim-wrapper.py
 	./create_sim-wrapper.py >> HDTraceMPIWrapper.c
 
 clean:
-	rm *~ *.o *.a HDTraceMPIWrapper.c
+	rm *.o *.a HDTraceMPIWrapper.c
 
 ### libglib2.0-0
