- logging für nested-calls geändert - zwei einfache tests hinzugefügt

--- a/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
@@ -1,5 +1,7 @@
 all:
 	$(CC) -o comm comm.c
+	$(CC) -o file file.c
+	$(CC) -o nested nested.c
 
 clean:
-	rm *.o *~
+	rm *.o *~ trace* comm file nested
