Support datatypes in project-description-merger

--- a/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
@@ -2,6 +2,7 @@ all:
 	$(CC) -o comm comm.c
 	$(CC) -o file file.c
 	$(CC) -o nested nested.c
+	$(CC) -o types types.c
 
 clean:
-	rm *.o *~ trace* comm file nested
+	rm *.o *~ trace* comm file nested types
