Added new iterator, modified project, topology manager removes unnecessary nodes.

--- a/PIOsimHD-Maint/mpiwrapperNew/.project
+++ b/PIOsimHD-Maint/mpiwrapperNew/.project
@@ -3,6 +3,7 @@
 	<name>HDTraceMPIWrapper</name>
 	<comment></comment>
 	<projects>
+		<project>HDTraceWritingCLibrary</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
