- using the new HDTraceWritingCLibrary

--- a/PIOsimHD-Maint/mpiwrapperNew/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/Makefile
@@ -1,12 +1,13 @@
-CFLAGS  += -Wall -ggdb  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS`
+CFLAGS  += -Wall -ggdb  -I../../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS`
 LDFLAGS += $(shell pkg-config --libs glib-2.0)
 
-all: libHDTrace.a  libHDTraceMPIWrapper.a
+all: libHDTraceMPIWrapper.a
+#all: libHDTrace.a  libHDTraceMPIWrapper.a
 
-HDTraceWriter.o: HDTraceWriter.c HDTraceWriter.h
+#HDTraceWriter.o: HDTraceWriter.c HDTraceWriter.h
 
-libHDTrace.a: HDTraceWriter.o
-	ar rcs libHDTrace.a HDTraceWriter.o
+#libHDTrace.a: HDTraceWriter.o
+#	ar rcs libHDTrace.a HDTraceWriter.o
 
 libHDTraceMPIWrapper.a: HDTraceMPIWrapper.o $(LDFLAGS)
 	ar rcs libHDTraceMPIWrapper.a HDTraceMPIWrapper.o 
