--- a/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/test/HDTests/Makefile
@@ -3,6 +3,7 @@ all:
 	$(CC) -o file file.c
 	$(CC) -o nested nested.c
 	$(CC) -o types types.c
+	$(CC) -o mpi-io-test mpi-io-test.c
 
 clean:
 	rm *.o *~ trace* comm file nested types
