* Refactoring of hdTopo * Add tests for hdTopo * Minor build system improvements * Minor documentation improvements

--- a/HDTraceWritingCLibrary/Makefile
+++ b/HDTraceWritingCLibrary/Makefile
@@ -1,7 +1,9 @@
 PWD=$(shell pwd)
 
-SRC_DIR=$(PWD)/src
-LIB_DIR=$(PWD)/lib
+SRC_DIR=src
+LIB_DIR=lib
+DOC_DIR=doc
+TESTS_DIR=tests
 
 AR=ar
 TAGS=ctags
@@ -9,7 +11,7 @@ TAGS=ctags
 ARFLAGS=rcs
 
 
-BINS=lib/libhdTrace.a lib/libhdStats.a
+BINS=$(LIB_DIR)/libhdTrace.a $(LIB_DIR)/libhdStats.a
 
 .PHONY: all clean dist-clean
 
@@ -17,25 +19,30 @@ all: $(BINS)
 
 clean:
 	$(MAKE) -C $(SRC_DIR) $@
+	$(MAKE) -C $(TESTS_DIR) $@
 	rm -f *.o $(BINS)
 	
 dist-clean: clean
 	$(MAKE) -C $(SRC_DIR) $@
+	$(MAKE) -C $(TESTS_DIR) $@
 	rm -f tags
-	rm -rf doc/*
+	rm -rf $(DOC_DIR)/*
 
-lib/libhdTrace.a: src/hdTrace.o src/hdTopo.o src/common.o src/util.o
+$(LIB_DIR)/libhdTrace.a: $(SRC_DIR)/hdTrace.o $(SRC_DIR)/hdTopo.o $(SRC_DIR)/common.o $(SRC_DIR)/util.o
 	@echo "  AR   $@"; \
 	$(AR) $(ARFLAGS) $@ $^
 
-lib/libhdStats.a: src/hdStats.o src/hdTopo.o src/common.o src/util.o
+$(LIB_DIR)/libhdStats.a: $(SRC_DIR)/hdStats.o $(SRC_DIR)/hdTopo.o $(SRC_DIR)/common.o $(SRC_DIR)/util.o
 	@echo "  AR   $@"; \
 	$(AR) $(ARFLAGS) $@ $^
 
 .PHONY: force
 
-src/%o: force
+$(SRC_DIR)/%o: force
 	$(MAKE) -C $(SRC_DIR) $(notdir $@)
+	
+tests: force all
+	$(MAKE) -C $(TESTS_DIR)
 
 doc: force
 	doxygen Doxyfile
