* Added tests for the first half of hdS_* functions * First half of hdS_* functions tested and debugged

--- a/HDTraceWritingCLibrary/.cproject
+++ b/HDTraceWritingCLibrary/.cproject
@@ -302,6 +302,14 @@
 <useDefaultCommand>true</useDefaultCommand>
 <runAllBuilders>true</runAllBuilders>
 </target>
+<target name="hdStatsTest" path="tests" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+<buildCommand>make</buildCommand>
+<buildArguments/>
+<buildTarget>hdStatsTest</buildTarget>
+<stopOnError>true</stopOnError>
+<useDefaultCommand>true</useDefaultCommand>
+<runAllBuilders>true</runAllBuilders>
+</target>
 </buildTargets>
 </storageModule>
 </cconfiguration>
