- adjusted to changes of names in HDTraceWritingCLibrary

--- a/PIOsimHD-Maint/mpiwrapperNew/Makefile
+++ b/PIOsimHD-Maint/mpiwrapperNew/Makefile
@@ -1,4 +1,10 @@
-CFLAGS  += -Wall -pedantic -std=gnu99 -ggdb  -I../../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -DHDTRACE_INCLUDE_NESTED_TEST
+ifeq ($(MPIIMP),openmpi)
+	DIST_CFLAGS = -Iinclude/openmpi
+else
+	DIST_CFLAGS = -Iinclude/mpich
+endif
+
+CFLAGS  += -Wall -pedantic -std=gnu99 -ggdb  $(DIST_CFLAGS) -I../../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -DHDTRACE_INCLUDE_NESTED_TEST
 LDFLAGS += $(shell pkg-config --libs glib-2.0)
 
 .PHONY: all
