- inserted barrier in comm.c so all ranks are guaranteed to be started   when MPI_Abort() is called - the wrapper now logs most functions using their name without MPI_ prefix   (no more CamelCase) - Support nesting depth limit that is not zero or HD_LOG_MAX_DEPTH.

--- a/HDMPIwrapper/test/HDTests/Makefile
+++ b/HDMPIwrapper/test/HDTests/Makefile
@@ -6,4 +6,4 @@ all:
 	$(CC) -o mpi-io-test mpi-io-test.c
 
 clean:
-	rm -f *.o *~ trace* comm file nested types mpi-io-test *.tmp
+	rm -f *.o *~ trace* comm file nested types mpi-io-test *.tmp *.out
