- added example for nonblocking + split-collective operations - fixed some compiler warnings - changed attributes in the project description generator

--- a/HDMPIwrapper/test/HDTests/Makefile
+++ b/HDMPIwrapper/test/HDTests/Makefile
@@ -4,6 +4,7 @@ all:
 	$(CC) -o nested nested.c
 	$(CC) -o types types.c
 	$(CC) -o mpi-io-test mpi-io-test.c
+	$(CC) -o nonblocking nonblocking.c
 
 clean:
 	rm -f *.o *~ trace* comm file nested types mpi-io-test *.tmp *.out
