--- a/PVFS2/2.8.1/pvfs2-config.h.in
+++ b/PVFS2/2.8.1/pvfs2-config.h.in
@@ -125,6 +125,9 @@
 /* Define if strerror_r is GNU-specific */
 #undef HAVE_GNU_STRERROR_R
 
+/* Define if HDTrace library is used */
+#undef HAVE_HDTRACE
+
 /* Define if libibverbs has reregister event */
 #undef HAVE_IBV_EVENT_CLIENT_REREGISTER
 
