* Added Perl script for reading header of statistics traces and gererating command line parameters for hdStatsPrint tool * Changed statistics file extension from .dat to .stat

--- a/HDTraceWritingCLibrary/tools/Makefile
+++ b/HDTraceWritingCLibrary/tools/Makefile
@@ -49,3 +49,12 @@ dist-clean: clean
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $<
 
 -include $(SRCS:%.c=$(DEPDIR)/%.P)
+
+######################
+# Run configurations #
+######################
+
+STATS_EXAMPLE=../../PerformanceTracingLibrary/examples/MyProject_host0_Performance.stat
+
+run_hdStatsPrint: hdStatsPrint hdStatsReadHeader.pl
+	./hdStatsPrint $(shell ./hdStatsReadHeader.pl $(STATS_EXAMPLE))
