--- a/MPICH2/mpich2-1.0.8p1/src/include/mpichconf.h.in
+++ b/MPICH2/mpich2-1.0.8p1/src/include/mpichconf.h.in
@@ -148,6 +148,9 @@
 /* Define to 1 if you have the `gettimeofday' function. */
 #undef HAVE_GETTIMEOFDAY
 
+/* Define if HDTrace library is used */
+#undef HAVE_HDTRACE
+
 /* Define if int16_t is supported by the C compiler */
 #undef HAVE_INT16_T
 
@@ -581,11 +584,15 @@
 #undef USE_WEAK_SYMBOLS
 
 /* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
-   significant byte first (like Motorola and SPARC, unlike Intel and VAX). */
-#if defined __BIG_ENDIAN__
-# define WORDS_BIGENDIAN 1
-#elif ! defined __LITTLE_ENDIAN__
-# undef WORDS_BIGENDIAN
+   significant byte first (like Motorola and SPARC, unlike Intel). */
+#if defined AC_APPLE_UNIVERSAL_BUILD
+# if defined __BIG_ENDIAN__
+#  define WORDS_BIGENDIAN 1
+# endif
+#else
+# ifndef WORDS_BIGENDIAN
+#  undef WORDS_BIGENDIAN
+# endif
 #endif
 
 /* Define if words are little endian */
