Patched MPICH which used HDTrace for tracing collectives. MPICH2 source project for eclipse. New includes for invoking MPI function wrappers of MPI wrapper Changed Label => Node in project file.

--- a/HDMPIwrapper/Makefile
+++ b/HDMPIwrapper/Makefile
@@ -4,21 +4,21 @@ else
 	DIST_CFLAGS = -Iinclude/mpich
 endif
 
-CFLAGS  += -Wall -Wextra -pedantic -std=gnu99 -ggdb  $(DIST_CFLAGS) -I../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -DHDTRACE_INCLUDE_NESTED_TEST
+CFLAGS  += -Wall -Wextra -pedantic -std=gnu99 -ggdb  $(DIST_CFLAGS) -I../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -DhdTrace_INCLUDE_NESTED_TEST
 LDFLAGS += $(shell pkg-config --libs glib-2.0)
 
 .PHONY: all
-all: libs/libHDTraceMPIWrapper.a
+all: lib/libhdTraceMPIWrapper.a
 
-libs/libHDTraceMPIWrapper.a: src/HDTraceMPIWrapper.o $(LDFLAGS)
-	ar rcs libs/libHDTraceMPIWrapper.a src/HDTraceMPIWrapper.o 
+lib/libhdTraceMPIWrapper.a: src/hdTraceMPIWrapper.o $(LDFLAGS)
+	ar rcs lib/libhdTraceMPIWrapper.a src/hdTraceMPIWrapper.o 
 
-src/HDTraceMPIWrapper.o: src/HDTraceMPIWrapper.src.c 
+src/hdTraceMPIWrapper.o: src/hdTraceMPIWrapper.src.c
 
-
-src/HDTraceMPIWrapper.c: src/HDTraceMPIWrapper.src.c scripts/create_sim-wrapper.py scripts/wrapper_conf.py include/interesting_funcs.h
-	cat src/HDTraceMPIWrapper.src.c > src/HDTraceMPIWrapper.c
-	scripts/create_sim-wrapper.py include/interesting_funcs.h >> src/HDTraceMPIWrapper.c
+src/hdTraceMPIWrapper.c: src/hdTraceMPIWrapper.src.c scripts/create_sim-wrapper.py scripts/wrapper_conf.py include/interesting_funcs.h include/hdMPITracer.h.in src/hdMPITracer.c 
+	cat src/hdTraceMPIWrapper.src.c > src/hdTraceMPIWrapper.c
+	cat include/hdMPITracer.h.in > include/hdMPITracer.h 
+	scripts/create_sim-wrapper.py include/interesting_funcs.h src/hdTraceMPIWrapper.c include/hdMPITracer.h 
 
 .PHONY: test
 
@@ -34,8 +34,8 @@ hdtest: all
 
 clean:
 	cd test ; make clean
-	rm -f src/*.o libs/*.a
-	rm -f src/HDTraceMPIWrapper.c
+	rm -f src/*.o lib/*.a
+	rm -f src/hdTraceMPIWrapper.c
 	rm -rf doc/doxygen/html
 	rm -rf doc/doxygen/latex
 	cd doc ; rm -rf mpiwrapper.aux mpiwrapper.bbl mpiwrapper.blg mpiwrapper.log mpiwrapper.pdf mpiwrapper.toc 
