--- a/HDMPIwrapper/Makefile.in
+++ b/HDMPIwrapper/Makefile.in
@@ -1,13 +1,12 @@
-DESTDIR =
 srcdir = @srcdir@
 prefix = @prefix@
 datarootdir = @datarootdir@
 exec_prefix = @exec_prefix@
-includedir = $(DESTDIR)@includedir@
-mandir = $(DESTDIR)@mandir@
-sbindir = $(DESTDIR)@sbindir@
-bindir = $(DESTDIR)@bindir@
-libdir = $(DESTDIR)@libdir@
+includedir = @includedir@
+mandir = @mandir@
+sbindir = @sbindir@
+bindir = @bindir@
+libdir = @libdir@
 
 VPATH = $(srcdir)
 SHELL = @SHELL@
@@ -15,7 +14,7 @@ SHELL = @SHELL@
 CC = @CC@
 LD = @CC@
 # make sure the srcdir include gets included first
-CFLAGS += -I$(srcdir)/include @CFLAGS@ @CPPFLAGS@
+CFLAGS += -Iinclude -I$(srcdir)/src @CFLAGS@ @CPPFLAGS@
 LDFLAGS += @LDFLAGS@
 
 #CFLAGS  += -Wall -Wextra -pedantic -std=gnu99 -ggdb  -I$(MPINC) -I../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -D HDTRACE_INCLUDE_NESTED_TEST
@@ -28,13 +27,15 @@ lib/libhdTraceMPIWrapper.a: src/hdTraceMPIWrapper.o
 	@echo "[ar] libhdTraceMPIWrapper.a"
 	@ar rcs lib/libhdTraceMPIWrapper.a src/hdTraceMPIWrapper.o 
 
-src/hdTraceMPIWrapper.o: src/hdTraceMPIWrapper.src.c	
+src/hdTraceMPIWrapper.o: src/hdTraceMPIWrapper.c
+	@echo "[CC] src/hdTraceMPIWrapper.o"
+	@$(CC) -c $(CFLAGS) src/hdTraceMPIWrapper.c -o src/hdTraceMPIWrapper.o
 
 src/hdTraceMPIWrapper.c: src/hdTraceMPIWrapper.src.c scripts/create_sim-wrapper.py scripts/wrapper_conf.py include/interesting_funcs.h include/hdMPITracer.h.in src/hdMPITracer.c
 	@echo "[PY] create"
-	@cat src/hdTraceMPIWrapper.src.c > src/hdTraceMPIWrapper.c
-	@cat include/hdMPITracer.h.in > include/hdMPITracer.h 
-	@scripts/create_sim-wrapper.py include/interesting_funcs.h src/hdTraceMPIWrapper.c include/hdMPITracer.h include/hdMPITracerCodeLocator.h
+	@cat $(srcdir)/src/hdTraceMPIWrapper.src.c > src/hdTraceMPIWrapper.c || exit 1
+	@cat $(srcdir)/include/hdMPITracer.h.in > include/hdMPITracer.h || exit 1
+	@$(srcdir)/scripts/create_sim-wrapper.py $(srcdir)/include/interesting_funcs.h src/hdTraceMPIWrapper.c include/hdMPITracer.h include/hdMPITracerCodeLocator.h
 
 .PHONY: test
 
@@ -60,7 +61,17 @@ clean:
 .PHONY: doc
 
 doc:
-	doxygen Doxyfile
-	cd doc; latex mpiwrapper
+	@echo "[doxygen]"
+	@doxygen $(srcdir)/Doxyfile
+	@echo "[latex]"
+	@cd doc; latex $(srcdir)/doc/mpiwrapper.tex
 
-### libglib2.0-0
+dist-clean: clean
+	rm -rf doc/doxygen/ config.status config.log lib/* include/hdMPITracerCodeLocator.h  include/hdMPITracer.h Makefile
+		
+install:
+	install -d $(includedir)
+	install -d $(libdir)
+	install include/hdMPITracerCodeLocator.h $(includedir)
+	install include/hdMPITracer.h $(includedir)
+	install lib/libhdTraceMPIWrapper.a $(libdir)
